[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/game/skill.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/skills/arc/arc.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 600.0

[node name="Arc" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="RangeArea" type="Area2D" parent="." index="0"]
collision_layer = 64
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea" index="0"]
shape = SubResource( 1 )

[node name="CdTimer" type="Timer" parent="." index="1"]
one_shot = true

[node name="VisualLines" type="Node2D" parent="." index="2"]

[connection signal="timeout" from="CdTimer" to="." method="_on_CdTimer_timeout"]
